lab06/rollouts-demo.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: canary-demo-canary
      stableService: canary-demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: canary-demo-vsvc
            routes:
            - primary
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 5m}
      - pause: {}
      - setWeight: 60
      - pause: {duration: 20s}
      - pause: {}
      - setWeight: 80
      - pause: {duration: 30s}
      - setWeight: 100 
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: nexweb1/canary-demo:v1
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
