lab06/rollouts-demo-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: caanry-demo-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: caanry-demo

---
apiVersion: v1
kind: Service
metadata:
  name: caanry-demo-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: caanry-demo
