lab06/rollouts-demo-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-demo-vsvc
spec:
  hosts:
  - canary-demo-stable
  http:
  - name: primary
    route:
    - destination:
        host: canary-demo-stable
        subset: stable
      weight: 100
    - destination:
        host: canary-demo-canary
        subset: canary
      weight: 0
